    * 3640 new filter option for status details: can now be negated
    * 3713 new filter: hosts with certain service problems
    * 3780 availability: now limit of fetched logfile rows is configurable.
    * 3864 tactical overview now shows the number of stale hosts and services
    * 3847 Painter options can now be reset to defaults...
    * 3059 FIX: Fixed highlighting of availability timeline time slices
    * 3175 FIX: Fix timeranges of graphs that are embedded in a dashboard...
    * 3076 FIX: fixed broken views in check_mk raw edition
    * 3077 FIX: CSV export is now available for host/service availability and now includes summary line
    * 3181 FIX: Omit icon for downloading agent output on shadow hosts (cmcdump)...
    * 3248 FIX: Avoid broken list of context filters and case of a BI error
    * 3251 FIX: Fix sorting of entries in Views sidebar element
    * 3230 FIX: Slightly improved popup menu positioning...
    * 3264 FIX: Fix display of values in graphs that are < 1.0
    * 3273 FIX: Dashboard: The dashboard is now preserving edit/view state during page reloads
    * 3090 FIX: fixed perf-o-meter link leading to old graph page even when new graphs are being used
    * 3260 FIX: Availability: ignores completely unmonitored objects in summary calculation
    * 3279 FIX: LDAP: Fixed default values of attribute selections...
    * 3285 FIX: Fixed exception when editing large bookmark lists
    * 3287 FIX: Fixed broken crash reporting (Submission of crashes did not work)
    * 3290 FIX: Fixed broken event quick delete icon when used in dashlets
    * 3236 FIX: Fixed host page of pnp4nagios...
    * 3293 FIX: Fixed graphs in IE with enabled compatibility mode (for IE < 8)
    * 3294 FIX: Fixed mixed languages when some users have localized GUI and some not...
    * 3313 FIX: Set correct mime type when exporting CSV and other non-HTML formats
    * 3315 FIX: Builtin icon visibility now can be correctly reset...